# laserchess-c

./: CMakeLists.txt  GameState.c  GameState.h  Piece.c  Piece.h  Player.c  Player.h  board.h  drawing.c  drawing.h  laser-beam.c  laser-beam.h  laser-chess.c  laser-chess.h  linked-list.c  linked-list.h  main.c  utils.c  utils.h
tests/: listtest.c  test_GameState.c  test_utils.c
tests/data/: startstate.mpack
